# path-fixer

./: .gitignore  PKGBUILD  README.md  fill_data.py  main.py  pyproject.toml
src/path_fixer/: fill_data.py  main.py
