[project]
name = "path-fixer"
version = "0.1.1"
description = "Tool for extracting Windows backups to Linux. Fixes paths and generates the directory structure."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tqdm>=4.67.1",
    "typer>=0.20.1",
]
[project.scripts]
path-fixer = "path_fixer.main:app"
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
